--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,8 +7,7 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5079",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=localhost,1433;Database=AirsoftBattleManagementSystem;User Id=sa;Password=K0ciaki!;"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "https": {
@@ -17,8 +16,7 @@
       "launchBrowser": false,
       "applicationUrl": "https://localhost:7179;http://localhost:5079",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_CONNECTION_STRING": "Server=localhost,1433;Database=AirsoftBattleManagementSystem;User Id=sa;Password=K0ciaki!;"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
