--- a/compose.yaml
+++ b/compose.yaml
@@ -4,9 +4,9 @@ services:
     build:
       context: .
       target: dev
+      dockerfile: src/Dockerfile
     volumes:
-      - ./:/app
-      - /app/obj
+      - ./src:/app/src/
     ports:
       - 8080:8080
     environment:
@@ -18,6 +18,7 @@ services:
     build:
       context: .
       target: final
+      dockerfile: src/Dockerfile
     ports:
       - 8080:8080
     environment:
