--- a/src/AirsoftBattlefieldManagementSystemAPI.csproj
+++ b/src/AirsoftBattlefieldManagementSystemAPI.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.4.0" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.0.34" />
   </ItemGroup>
 
 </Project>
