--- a/src/AirsoftBattlefieldManagementSystemAPI.csproj
+++ b/src/AirsoftBattlefieldManagementSystemAPI.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
@@ -17,6 +19,10 @@
     </PackageReference>
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.4.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.34" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Validators\" />
   </ItemGroup>
 
 </Project>
