--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=AirsoftBattleManagementSystem;User Id=SA;Password=K0ciaki!;Encrypt=True;TrustServerCertificate=True;"
+  },
+  "Authentication": {
+    "JwtKey": "yS8BM6bpZZ!P5!$PjtwwcDd%rWgLMQ#yL4!YH6NZby2vbwjqUVLEeTf52L!Augp93h5%gV&kC2GZsZwncuUkso",
+    "JwtExpireDays": 7,
+    "JwtIssuer": "http://airsoft-battlefield-management-system.com"
   }
 }
